wdl-ast/tests/validation/duplicate-task-name/source.wdl
## This is a test of having duplicate task names in a document.

version 1.1

task foo {
    command <<<>>>
}

task bar {
    command <<<>>>
}

task foo {
    command <<<>>>
}

task bar {
    command <<<>>>
}
